<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="match_parent"
   	android:layout_height="wrap_content"
   	android:padding="15dip" >
   	<EditText android:id="@+id/email_input"
   		style="@style/TextInput"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_alignParentTop="true"
   		android:hint="@string/email_input_hint"
   		android:layout_marginBottom="20dip" />
   	<EditText android:id="@+id/password_input"
   		style="@style/TextInput"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/email_input"
   		android:hint="@string/password_input_hint"
   		android:layout_marginBottom="20dip" />
   	<Button android:id="@+id/sign_in_button"
   		style="@style/SimpleButton"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/password_input"
   		android:layout_centerHorizontal="true"
   		android:layout_marginBottom="5dip"
   		android:text="@string/sign_in_button" />
   	<TextView android:id="@+id/or"
		style="@style/FormLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/sign_in_button"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="5dip"
		android:text="@string/or" />
   	<Button android:id="@+id/new_account_button"
   		style="@style/SimpleButton"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/or"
   		android:layout_centerHorizontal="true"
   		android:layout_marginBottom="20dip"
   		android:text="@string/create_account_button"
   		android:onClick="newAccount" />
   	<TextView android:id="@+id/recover_password_link"
   		style="@style/LinkButton"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/new_account_button"
   		android:layout_alignParentLeft="true"
   		android:text="@string/recover_password_button" />
   	<TextView android:id="@+id/legal_info_link"
   		style="@style/LinkButton"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/new_account_button"
   		android:layout_alignParentRight="true"
   		android:text="@string/legal_info_button" />
 </RelativeLayout>