<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >
    <RelativeLayout android:id="@+id/header"
    	android:layout_width="match_parent"
    	android:layout_height="70dip"
    	android:background="@drawable/header_bg" >
    	<ImageView android:id="@+id/logo"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentLeft="true"
    		android:layout_centerVertical="true"
    		android:layout_marginTop="10dip"
    		android:layout_marginBottom="10dip"
    		android:src="@drawable/logo" />
    	<Button android:id="@+id/account_button"
    		style="@style/TextShadow"
    		android:layout_width="wrap_content"
    		android:layout_height="match_parent"
    		android:paddingLeft="15dip"
    		android:paddingRight="15dip"
    		android:layout_alignParentRight="true"
    		android:layout_centerVertical="true"
    		android:gravity="center"
    		android:text="@string/sign_in_button"
    		android:textColor="@color/white"
    		android:textSize="24sp"
    		android:textStyle="bold"
    		android:background="@drawable/header_button"
    		android:onClick="signIn" />
    </RelativeLayout>
    <LinearLayout android:id="@+id/main_menu"
    	android:orientation="vertical"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/header"
    	android:paddingTop="60dip"
    	android:paddingLeft="10dip"
    	android:paddingRight="10dip" >
    	<TextView android:id="@+id/location_input_label"
    		style="@style/FormLabel"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_gravity="left"
    		android:layout_marginBottom="5dip"
    		android:text="@string/location_input_label" />
    	<com.devspacenine.fastfood.AddressSelectorForm android:id="@+id/location_input"
    		android:layout_width="match_parent"
			android:layout_height="wrap_content"
    		android:layout_marginBottom="15dip" />
    	<TextView android:id="@+id/cuisine_input_label"
    		style="@style/FormLabel"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_gravity="left"
    		android:layout_marginBottom="5dip"
    		android:text="@string/cuisine_input_label" />
    	<TextView android:id="@+id/cuisine_input"
    		style="@style/TextInput"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginBottom="20dip"
    		android:hint="@string/cuisine_input_hint"
    		android:clickable="true"
    		android:focusable="true"
			android:maxLines="1" />
		<Button android:id="@+id/search_button"
			style="@style/SimpleButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="5dip"
			android:text="@string/search_button"
			android:onClick="search" />
		<TextView
			style="@style/FormLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dip"
			android:layout_gravity="center"
			android:text="@string/or" />
		<Button android:id="@+id/favorites_button"
			style="@style/SimpleButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/favorites_button" />
    </LinearLayout>
</RelativeLayout>
