<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >
    <RelativeLayout android:id="@+id/header"
    	android:layout_width="match_parent"
    	android:layout_height="70dip"
    	android:background="@drawable/header_bg" >
    	<ImageView android:id="@+id/logo"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentLeft="true"
    		android:layout_centerVertical="true"
    		android:layout_marginTop="10dip"
    		android:layout_marginBottom="10dip"
    		android:src="@drawable/logo" />
    	<Button android:id="@+id/account_button"
    		style="@style/TextShadow"
    		android:layout_width="wrap_content"
    		android:layout_height="match_parent"
    		android:paddingLeft="15dip"
    		android:paddingRight="15dip"
    		android:layout_alignParentRight="true"
    		android:layout_centerVertical="true"
    		android:gravity="center"
    		android:text="@string/sign_in_button"
    		android:textColor="@color/white"
    		android:textSize="24sp"
    		android:textStyle="bold"
    		android:background="@drawable/header_button"
    		android:onClick="signIn" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/subheader"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/header"
    	android:paddingTop="5dip"
    	android:paddingBottom="5dip"
    	android:paddingLeft="15dip"
    	android:paddingRight="15dip"
    	android:background="@drawable/subheader_bg" >
    	<TextView android:id="@+id/restaurant_count"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentLeft="true"
    		android:layout_alignParentTop="true"
    		android:textSize="14sp"
    		android:textStyle="bold"
    		android:textColor="@color/dark_text"
    		android:text="@string/restaurant_count" />
    	<TextView android:id="@+id/restaurant_count_subtext"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentLeft="true"
    		android:layout_below="@id/restaurant_count"
    		android:textSize="10sp"
    		android:textColor="@color/grey_text"
    		android:text="@string/restaurant_count_subtext" />
    	<Button android:id="@+id/refine_button"
    		style="@style/SmallButton"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentRight="true"
    		android:layout_centerVertical="true"
    		android:text="@string/filter_button" />
    	<ListView android:id="@+id/filter_list"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_below="@id/restaurant_count_subtext"
    		android:cacheColorHint="#00000000"
    		android:divider="@color/transparent"
    		android:dividerHeight="0px" />
    </RelativeLayout>
    <ListView android:id="@android:id/list"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_below="@id/subheader"
   		android:cacheColorHint="#00000000" />
    <ImageView android:id="@android:id/empty"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:src="@drawable/loader" />
</RelativeLayout>